# python-venusclient

./: .gitignore  .gitreview  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py
releasenotes/source/: conf.py  index.rst
venusclient/: exceptions.py  i18n.py  shell.py  version.py
venusclient/common/: base.py  cliutils.py  http.py  httpclient.py  utils.py
venusclient/common/apiclient/: exceptions.py
venusclient/v1/: analyse.py  analyse_shell.py  anomaly.py  anomaly_shell.py  basemodels.py  client.py  config.py  config_shell.py  search.py  search_shell.py  shell.py
