[metadata]
name = python-venusclient
summary = Python client for venus API
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8

[files]
packages =
    venusclient

[entry_points]
console_scripts =
    venus = venusclient.shell:main


